refactor: simplify exception hierarchy and clean up message service logic
- Remove `DomainException` and refactor derived exceptions to directly extend `RuntimeException`.
- Use streamlined helper methods (`messageNotFoundException`) for cleaner error handling.
- Optimize message service methods for readability and performance.
- Update tests to reflect exception changes and improve error field validation.